fix: enabled smooth PDF scrolling on iPhone with iOS-specific styles

--- a/src/components/ResumeModal/ResumeModal.css
+++ b/src/components/ResumeModal/ResumeModal.css
@@ -8,6 +8,7 @@
   border-radius: 10px;
   position: relative;
   text-align: center;
+  overflow-y: auto;
 
 }
 
@@ -18,8 +19,8 @@
   border: none;
   margin-top: 1rem;
   display: block;
-  overflow: scroll;
-  /* important */
+  overflow: auto;
+  -webkit-overflow-scrolling: touch; /* THIS is key for iOS */
 }
 
 
